# manim-physics

./: .gitignore  Makefile  README.md  pyproject.toml  voice.py
example/: 3d.py  car_pulley.py  math_video.py
physics/: __init__.py  pobject.py  surface.py
